# rirr

./: .env  Cargo.toml  diesel.toml
src/: enums.rs  graphql.rs  main.rs  models.rs  sqldb.rs  tables.rs  utils.rs
src/sqldb/: handler.rs  operators.rs  schema.rs  tables.rs
