[package]
name = "rirr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "network-address", "uuidv07", "serde_json", "numeric"] }
dotenv = "0.15.0"
ipnetwork = "0.18.0"
uuid = "0.8.2"
serde_json = "1.0"
bigdecimal = "0.1.2"
