[package]
name = "rirr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "network-address", "uuidv07", "serde_json", "numeric", "chrono", "r2d2"] }
dotenv = "0.15"
ipnetwork = "0.18"
uuid = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

bigdecimal = "0.1"
diesel-derive-enum = { version = "1", features = ["postgres"] }

async-graphql = { version = "3", features = ["chrono", "uuid", "dataloader", "log"] }
async-graphql-actix-web = "3"
actix-web = { version = "4.0.0-beta.18", default-features = false }
chrono = { version = "0.4" }
log = "0.4.0"
env_logger = "0.9"
